# epic

./: .autotools  .cproject  .gitignore  .gitmodules  .project  AUTHORS  Makefile.am  NEWS  README  configure.ac
analysis/: copticFlux.ipynb  copticFlux.py  smsToSilo.py  surfaceProcessing.ipynb  surfaceProcessing.py  visitCommands.txt  visitExpressions.xml  volumeProcessing.ipynb  volumeProcessing.py
boost/: Makefile.am
cmake/: Makefile.am
cuba/: Makefile.am  configure.patch
cubature/: Makefile.am  cubature-20101018.tgz
eigen/: Makefile.am
fmdb/: Makefile.am  auxillaryBuildScripts.tar  buildFMDBSerial.env  buildFMDBSerial.sh  build_Serial_FMDB_GMI.sh
netgen/: Makefile.am
odeint/: Makefile.am
python/: Makefile.am
quadrature/: Makefile.am  quadrature.tgz
src/: DistributionFunction.cpp  DistributionFunction.h  Field.cpp  Field.h  IntegrandContainer.cpp  IntegrandContainer.h  Makefile.am  Mesh.cpp  Mesh.h  MinimumBasisFunction.cpp  MinimumBasisFunction.h  Orbit.cpp  Orbit.h  Solver.cpp  Solver.h  SpatialDependence.cpp  SpatialDependence.h  Stepper.h  SurfaceField.cpp  SurfaceField.h  SurfaceMesh.cpp  SurfaceMesh.h  VelocityAndAcceleration.h  classes.h  custom_mImportVTK.cc  distributionFunctionFromBoundary.cpp  epic.cpp  epic.h  functions.cpp  functions.h  intersect_RayTriangle.cpp  mesher.cpp  mesher.h  oldCode.cpp  playground.cpp  solutionTransfer.cpp  typesAndDefinitions.h  variables.cpp  variables.h
superlu/: Makefile.am  get_perm_c.patch  get_perm_c_parmetis.patch
vtk/: Makefile.am
